use .toList() instead